--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.tags {
+    @apply bg-neutral-800 rounded-full p-1.5 text-white text-sm border;
+}
