--- a/src/layouts/DefaultWebsite.astro
+++ b/src/layouts/DefaultWebsite.astro
@@ -1,8 +1,6 @@
 ---
 // layouts/DefaultWebsite.astro
-import Pfooter from "../components/Pfooter.astro";
-import Pheader from "../components/Pheader.astro";
-import link from "../content/global.json";
+import "../styles/global.css";
 const { pageTitle } = Astro.props;
 ---
 <html lang="en">
@@ -15,30 +13,43 @@ const { pageTitle } = Astro.props;
 		  href="https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css"
 		/>
 		<link rel="icon" href="/images/favicon.ico" />
-		<link rel="stylesheet" href="/styles/global.css" />
 	</head>
+
 	<body class="flex flex-col bg-neutral-950 text-white min-h-screen">
-		<Pheader />
+
+		<!-- 導覽行 -->
+		<header class="bg-black h-16 flex items-center justify-evenly sticky top-0">
+			<a href="/" class="text-white text-base">PepperSauce</a>
+			<div class="flex items-center justify-evenly gap-5">
+				<a href="/about" style="color:#8f9297;" class="text-lg">關於</a>
+				<a href="/portfolios" style="color:#8f9297;" class="text-lg">作品集</a>
+				<a href="/contact" style="color:#8f9297;" class="text-lg">聯絡</a>
+			</div>
+		</header>
+
+		<!-- 主體 -->
 		<main class="flex flex-col items-center flex-grow px-4">
 		  <slot />
 		</main>
-		<Pfooter />
-	
-		<script type="module" define:vars={{ link }}>
-		  const bindings = {
-			ig: link.link.ig,
-			dc: link.link.dc,
-			github: link.link.github,
-		  };
-		  for (const key in bindings) {
-			document.querySelectorAll(`button.${key}`).forEach((btn) => {
-			  btn.addEventListener("click", () => {
-				window.open(bindings[key], "_blank");
-			  });
-			});
-		  }
-		</script>
-	
+
+		<!-- 頁尾 -->
+		<footer style="border-top-width: 0.5px; border-color: #717171;" class="h-20 opacity-55 flex justify-evenly items-center">
+			<div class="flex flex-row gap-6 mt-1">
+				<a href="https://www.instagram.com/po_shan.0611/" target="_blank">
+					<i style="color:#717171;" class="fi fi-brands-instagram text-2xl"></i>
+				</a>
+				<a href="https://discord.com/users/514774919381516288" target="_blank">
+					<i style="color:#717171;" class="fi fi-brands-discord text-2xl"></i>
+				</a>
+				<a href="https://github.com/PepperSauce0712" target="_blank">
+					<i style="color:#717171;" class="fi fi-brands-github text-2xl"></i>
+				</a>
+			</div>
+			<p></p>
+			<p class="text-lg" style="color:#717171;">Copyright © 2025 PepperSauce. All rights reserved.</p>
+		</footer>
+
+		<!-- 背景 -->
 		<style>
 		  body {
 			background-image: linear-gradient(
@@ -50,5 +61,6 @@ const { pageTitle } = Astro.props;
 			background-size: 35px 35px;
 		  }
 		</style>
-	  </body>
+
+	</body>
 </html>
