--- a/src/layouts/DefaultWebsite.astro
+++ b/src/layouts/DefaultWebsite.astro
@@ -19,34 +19,35 @@ const { pageTitle } = Astro.props;
 
 		<!-- 導覽行 -->
 		<header class="bg-black h-16 flex items-center justify-evenly sticky top-0">
-			<a href="/" class="text-white text-base">PepperSauce</a>
+			<a href="/" class="text-white text-lg">PepperSauce</a>
 			<div class="flex items-center justify-evenly gap-5">
-				<a href="/about" style="color:#8f9297;" class="text-lg">關於</a>
-				<a href="/portfolios" style="color:#8f9297;" class="text-lg">作品集</a>
-				<a href="/contact" style="color:#8f9297;" class="text-lg">聯絡</a>
+				<a href="/about" class="text-white text-lg">關於</a>
+				<a href="/portfolios" class="text-white text-lg">作品集</a>
+				<a href="/blog" class="text-white text-lg">部落格</a>
+				<a href="/contact" class="text-white text-lg">聯絡</a>
 			</div>
 		</header>
 
 		<!-- 主體 -->
-		<main class="flex flex-col items-center flex-grow px-4">
+		<main class="">
 		  <slot />
 		</main>
 
 		<!-- 頁尾 -->
-		<footer style="border-top-width: 0.5px; border-color: #717171;" class="h-20 opacity-55 flex justify-evenly items-center">
+		<footer style="border-top-width: 0.5px; border-color: #717171;" class="h-20 opacity-85 flex justify-evenly items-center">
 			<div class="flex flex-row gap-6 mt-1">
 				<a href="https://www.instagram.com/po_shan.0611/" target="_blank">
-					<i style="color:#717171;" class="fi fi-brands-instagram text-2xl"></i>
+					<i class="text-white fi fi-brands-instagram text-2xl"></i>
 				</a>
 				<a href="https://discord.com/users/514774919381516288" target="_blank">
-					<i style="color:#717171;" class="fi fi-brands-discord text-2xl"></i>
+					<i class="text-white fi fi-brands-discord text-2xl"></i>
 				</a>
 				<a href="https://github.com/PepperSauce0712" target="_blank">
-					<i style="color:#717171;" class="fi fi-brands-github text-2xl"></i>
+					<i class="text-white fi fi-brands-github text-2xl"></i>
 				</a>
 			</div>
 			<p></p>
-			<p class="text-lg" style="color:#717171;">Copyright © 2025 PepperSauce. All rights reserved.</p>
+			<p class="text-lg text-white" >Copyright © 2025 PepperSauce. All rights reserved.</p>
 		</footer>
 
 		<!-- 背景 -->
