--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,33 +1,35 @@
 ---
-import Navbar from "../components/Navbar.astro";
 import DefaultWebsite from "../layouts/DefaultWebsite.astro";
 import { Image } from 'astro:assets';
 ---
 <DefaultWebsite pageTitle="PepperSauce | 個人網頁">
-    <!-- 首頁 -->
-    <section class="flex flex-col items-center min-h-screen">
-        <Image
-        src="/images/PepperSauce_icon.jpg"
-        alt="PepperSauce的頭貼"
-        width="150"
-        height="150"
-        class="rounded-full outline outline-1 outline-neutral-700"
-        />
-        <p class="text-white font-bold text-3xl h-12">嗨，我是
-            <span class="text-green-300">PepperSauce</span>
-        </p>
-        <p class="text-neutral-400 text-base">&lt;/&gt;Unreal Engine VFXer</p>
-        <p class="text-neutral-400 text-base my-20">「但行好事，莫問前程。」</p>
-        <div class="flex flex-row gap-5">
-            <Navbar social="ig" cls="text-2xl"/>
-            <Navbar social="dc" cls="text-2xl"/>
-            <Navbar social="github" cls="text-2xl"/>
+    <!-- 主頁 -->
+    <section class="flex flex-col items-center min-h-screen gap-y-24 p-16">
+        <div class="flex flex-col items-center mt-48">
+            <Image
+            src="/images/PepperSauce_icon.jpg"
+            alt="PepperSauce的頭貼"
+            width="150"
+            height="150"
+            class="rounded-full outline outline-1 outline-neutral-700 mb-6"
+            />
+            <p class="text-4xl">你好，我是 <span class="text-green-300">PepperSauce</span></p>
+            <p class="text-xl text-neutral-400 mt-1">InfoSec / Programming / Locking</p>
         </div>
-        <button class="bg-white rounded-full w-36 h-10 my-3 flex flex-row justify-center gap-2"
-                onclick="window.location.href='/'">
-            <i class="fi fi-rr-diploma text-xl my-2.5"></i>
-            <p class="font-bold my-2">查看經歷</p>
-            <i class="fi fi-rr-arrow-right my-2.5"></i>
-        </button>
+
+        <div class="flex flex-row gap-x-8 text-3xl text-neutral-400">
+            <a href="https://www.instagram.com/po_shan.0611/" target="_blank">
+                <i class="fi fi-brands-instagram"></i>
+            </a>
+            <a href="https://discord.com/users/514774919381516288" target="_blank">
+                <i class="fi fi-brands-discord"></i>
+            </a>
+            <a href="https://github.com/PepperSauce0712" target="_blank">
+                <i class="fi fi-brands-github"></i>
+            </a>
+        </div>
     </section>
+
+    <!-- 自我介紹 -->
+
 </DefaultWebsite>
