--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import { Image } from 'astro:assets';
 ---
 <DefaultWebsite pageTitle="PepperSauce | 個人網頁">
     <!-- 主頁 -->
-    <section class="flex flex-col items-center min-h-screen gap-y-24 p-16">
+    <section class="flex flex-col items-center min-h-min gap-y-24 p-16">
         <div class="flex flex-col items-center mt-48">
             <Image
             src="/images/PepperSauce_icon.jpg"
@@ -28,6 +28,7 @@ import { Image } from 'astro:assets';
                 <i class="fi fi-brands-github"></i>
             </a>
         </div>
+        <p class="h-60"></p>
     </section>
 
     <!-- 自我介紹 -->
