--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,8 @@ import { Image } from 'astro:assets';
 ---
 <DefaultWebsite pageTitle="PepperSauce | 個人網頁">
     <!-- 主頁 -->
-    <section class="flex flex-col items-center min-h-min gap-y-24 p-16">
-        <div class="flex flex-col items-center mt-48">
+    <section class="flex flex-col items-center gap-y-24 p-16 mt-48">
+        <div class="flex flex-col items-center">
             <Image
             src="/images/PepperSauce_icon.jpg"
             alt="PepperSauce的頭貼"
@@ -28,7 +28,6 @@ import { Image } from 'astro:assets';
                 <i class="fi fi-brands-github"></i>
             </a>
         </div>
-        <p class="h-60"></p>
     </section>
 
     <!-- 自我介紹 -->
