--- a/src/layouts/DefaultWebsite.astro
+++ b/src/layouts/DefaultWebsite.astro
@@ -29,7 +29,7 @@ const { pageTitle } = Astro.props;
 		</header>
 
 		<!-- 主體 -->
-		<main class="">
+		<main class="flex flex-col items-center min-h-screen gap-y-16">
 		  <slot />
 		</main>
 
