--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -40,10 +40,10 @@ import { Image } from 'astro:assets';
         <p class="text-3xl text-white font-bold mt-24">技術栈</p>
 
         <div class="grid grid-cols-4 gap-x-10 gap-y-10 mt-16">
-            <p class="text-white font-bold text-lg text-center">前端開發</p>
-            <p class="text-white font-bold text-lg text-center">後端開發</p>
-            <p class="text-white font-bold text-lg text-center">遊戲開發</p>
-            <p class="text-white font-bold text-lg text-center">其他</p>
+            <p class="text-white text-lg text-center">前端開發</p>
+            <p class="text-white text-lg text-center">後端開發</p>
+            <p class="text-white text-lg text-center">遊戲開發</p>
+            <p class="text-white text-lg text-center">其他</p>
             <div class="grid grid-cols-2 gap-8 grid-rows-3">
                 <Logoimage icon="/ui_icons/astro-svgrepo-com.svg" name="Astro"></Logoimage>
                 <Logoimage icon="/ui_icons/tailwind-css-svgrepo-com.svg" name="Tailwind"></Logoimage>
@@ -61,5 +61,11 @@ import { Image } from 'astro:assets';
             </div>
         </div>
     </section>
+
+    <!-- 作品集 -->
+    <section class="flex flex-col items-center">
+        <p class="text-3xl text-white font-bold mt-8">作品集</p>
+    </section>
+    
 
 </DefaultWebsite>
