--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,5 +3,6 @@ import DefaultWebsite from "../layouts/DefaultWebsite.astro";
 ---
 <DefaultWebsite pageTitle="PepperSauce | 部落格">
 
-    <!-- 自我介紹 -->
+    <!-- 部落格 -->
+    <a href="../blogs/whoami">whoami</a>
 </DefaultWebsite>
