--- a/src/layouts/DefaultWebsite.astro
+++ b/src/layouts/DefaultWebsite.astro
@@ -33,7 +33,7 @@ const { pageTitle } = Astro.props;
 		</main>
 
 		<!-- 頁尾 -->
-		<footer style="border-top-width: 0.5px; border-color: #717171;" class="h-20 opacity-85 flex justify-evenly items-center">
+		<footer style="border-top-width: 0.5px; border-color: #717171;" class="h-20 mt-4 opacity-85 flex justify-evenly items-center">
 			<div class="flex flex-row gap-6 mt-1">
 				<a href="https://www.instagram.com/po_shan.0611/" target="_blank">
 					<i class="text-white fi fi-brands-instagram text-2xl"></i>
