--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,9 +21,7 @@ import { Image } from 'astro:assets';
                 <span class="text-2xl">嗨！你好，我是 <span class="text-green-300">PepperSauce</span>，你也可以叫我胡椒。</span>
                 <br>
                 <br>
-                • 我的興趣：🚩資訊安全、🖥️程式設計、📑網頁開發、🔒Locking
-                <br>
-                、📖哲學、🎮玩遊戲
+                • 我的興趣：🚩資訊安全、🖥️程式設計、📑網頁開發、🔒Locking、📖哲學、🎮玩遊戲
                 <br>
                 <br>
                 • 玩的遊戲：Minecraft、Valorant、GTA5、Steam(?
