--- a/src/components/Blogblock.astro
+++ b/src/components/Blogblock.astro
@@ -17,9 +17,9 @@ type Fronmatter = {
     layout: string;
 };
 ---
-<div class="rounded-lg bg-neutral-800 w-auto p-3">
+<div class="rounded-lg bg-neutral-900 w-auto p-3">
     <!-- 時間 -->
-	<div class= "flex flex-row bg-neutral-800 rounded-xl mb-1">
+	<div class= "flex flex-row rounded-xl mb-1">
 		<i class="fi fi-rr-clock text-xs mr-1 mt-1"></i>
         <p class="text-sm">{info.pubDate.slice(0, 10)}</p>
 	</div>
