--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -6,7 +6,10 @@ import Blogblock from "../components/Blogblock.astro";
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 
     <!-- 精選文章x4 -->
-    <p class="text-3xl text-white font-bold mt-32">精選文章</p>
+    <div class="mt-48 flex flex-col items-center">
+        <h1 class="text-white font-bold text-3xl mb-1">精選文章</h1>
+        <p class="text-neutral-400 text-xl">每一篇都花費許多心思撰寫的</p>
+    </div>
     <section class="grid grid-cols-2 w-1/2 h-auto gap-4">
         <Blogblock mdx="whoami"/>
         <Blogblock mdx="test1"/>
