--- a/src/layouts/DefaultMDX.astro
+++ b/src/layouts/DefaultMDX.astro
@@ -3,17 +3,20 @@
 import "../styles/global.css";
 const { frontmatter } = Astro.props;
 ---
+
 <html lang="en">
 	<head>
 		<title>{"PepperSauce | " + frontmatter.title}</title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+		<link
+			rel="stylesheet"
+			href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
+		/>
 		<link rel="icon" href="/images/favicon.ico" />
 	</head>
 
 	<body class="flex flex-col bg-neutral-950 text-white min-h-screen">
-
 		<!-- 導覽行 -->
 		<header class="bg-black h-16 flex items-center justify-evenly sticky top-0">
 			<a href="/" class="text-white text-lg">PepperSauce</a>
@@ -26,26 +29,26 @@ const { frontmatter } = Astro.props;
 
 		<!-- 主體 -->
 		<main class="min-h-screen">
-		  <!-- 文章標題、標籤、時間 -->
-		  <div class="mx-auto w-1/3 h-32 border-b-2 border-dashed border-neutral-600">
-			<p class="text-4xl text-green-300 mt-12">{frontmatter.title}</p>
+			<!-- 文章標題、標籤、時間 -->
+			<div
+				class="mx-auto w-1/3 h-32 border-b-2 border-dashed border-neutral-600"
+			>
+				<p class="text-4xl text-green-300 mt-12">{frontmatter.title}</p>
 
-			<div class="flex flex-row mt-12 gap-x-2">
-				{frontmatter.tags.map((tag: string) => (
-					<p class="tag">{tag}</p>
-				))}
+				<div class="flex flex-row mt-12 gap-x-2">
+					{frontmatter.tags.map((tag: string) => <p class="tag">{tag}</p>)}
 
-				<div class= "tag ml-auto">
-					<i class="fi fi-rr-clock text-sm mr-1"></i>
-					{frontmatter.pubDate.slice(0, 10)}
+					<div class="tag ml-auto">
+						<i class="fi fi-rr-clock text-sm mr-1"></i>
+						{frontmatter.pubDate.slice(0, 10)}
+					</div>
 				</div>
 			</div>
-		  </div>
 
-		  <!-- 文章內容 -->
-		  <div class="w-1/3 markdown mx-auto">
-			<slot/>
-		  </div>
+			<!-- 文章內容 -->
+			<div class="w-1/3 markdown mx-auto">
+				<slot />
+			</div>
 		</main>
 
 		<!-- 導覽 -->
@@ -56,7 +59,10 @@ const { frontmatter } = Astro.props;
 		</nav>
 
 		<!-- 頁尾 -->
-		<footer style="border-top-width: 0.5px; border-color: #717171;" class="h-20 opacity-85 flex justify-evenly items-center mt-4">
+		<footer
+			style="border-top-width: 0.5px; border-color: #717171;"
+			class="h-20 opacity-85 flex justify-evenly items-center mt-4"
+		>
 			<div class="flex flex-row gap-6 mt-1">
 				<a href="https://www.instagram.com/po_shan.0611/" target="_blank">
 					<i class="text-white fi fi-brands-instagram text-2xl"></i>
@@ -69,20 +75,26 @@ const { frontmatter } = Astro.props;
 				</a>
 			</div>
 			<p></p>
-			<p class="text-lg text-white" >Copyright © 2025 PepperSauce. All rights reserved.</p>
+			<p class="text-lg text-white">
+				Copyright © 2025 PepperSauce. All rights reserved.
+			</p>
 		</footer>
 
 		<!-- 背景 與 Markdown格式-->
 		<style>
-		  body {
-			background-image: linear-gradient(
-				to right,
-				rgba(130, 130, 130, 0.05) 1px,
-				transparent 1px
-			  ),
-			  linear-gradient(to bottom, rgba(130, 130, 130, 0.05) 1px, transparent 1px);
-			background-size: 35px 35px;
-		  }
+			body {
+				background-image: linear-gradient(
+						to right,
+						rgba(130, 130, 130, 0.05) 1px,
+						transparent 1px
+					),
+					linear-gradient(
+						to bottom,
+						rgba(130, 130, 130, 0.05) 1px,
+						transparent 1px
+					);
+				background-size: 35px 35px;
+			}
 		</style>
 
 		<!-- JS自動生成TOC-->
@@ -95,9 +107,9 @@ const { frontmatter } = Astro.props;
 				const li = document.createElement("li");
 
 				a.href = `#${heading.id}`;
-				a.innerText = `${heading.id}`
-				
-				switch (heading.tagName){
+				a.innerText = `${heading.id}`;
+
+				switch (heading.tagName) {
 					case "H1":
 						li.className = "text-neutral-400 text-xs";
 						break;
@@ -113,6 +125,5 @@ const { frontmatter } = Astro.props;
 				toc.appendChild(li);
 			});
 		</script>
-
 	</body>
 </html>
