--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,69 +1,115 @@
 ---
 import DefaultWebsite from "../layouts/DefaultWebsite.astro";
 ---
+
 <DefaultWebsite pageTitle="PepperSauce | 聯絡我">
+	<!-- 寄信表單 -->
+	<div class="mt-48 flex flex-col items-center">
+		<h1 class="text-white font-bold text-3xl mb-1">聯絡我</h1>
+		<p class="text-neutral-400 text-xl">更推薦以社群媒體的方式聯絡我喔！</p>
+	</div>
 
-    <!-- 寄信表單 -->
-    <div class="mt-48 flex flex-col items-center">
-        <h1 class="text-white font-bold text-3xl mb-1">聯絡我</h1>
-        <p class="text-neutral-400 text-xl">更推薦以社群媒體的方式聯絡我喔</p>
-    </div>
+	<form method="post" class="w-1/6 flex flex-col gap-y-8">
+		<div>
+			<label for="name" class="text-xl">稱呼</label>
+			<input
+				type="text"
+				id="name"
+				class="w-full bg-neutral-900 border border-neutral-700 rounded-lg text-white p-2"
+				placeholder="請輸入您的稱呼"
+				required
+			/>
+		</div>
 
-    <form method="post" class="w-1/6 flex flex-col gap-y-8">
-        <div>
-            <label for="name" class="text-xl">稱呼</label>
-            <input type="text" id="name" class="w-full bg-neutral-900 border border-neutral-700 rounded-lg text-white p-2" placeholder="請輸入您的稱呼" required />
-        </div>
+		<div>
+			<label for="email" class="text-xl">電子郵件</label>
+			<input
+				type="text"
+				id="email"
+				class="w-full bg-neutral-900 border border-neutral-700 rounded-lg text-white p-2"
+				placeholder="請輸入您的電子郵件"
+				required
+			/>
+		</div>
 
-        <div>
-            <label for="email" class="text-xl">電子郵件</label>
-            <input type="text" id="email" class="w-full bg-neutral-900 border border-neutral-700 rounded-lg text-white p-2" placeholder="請輸入您的電子郵件" required />
-        </div>
+		<div>
+			<label for="title" class="text-xl">標題</label>
+			<input
+				type="text"
+				id="title"
+				class="w-full bg-neutral-900 border border-neutral-700 rounded-lg text-white p-2"
+				placeholder="請輸入信件標題"
+				required
+			/>
+		</div>
 
-        <div>
-            <label for="title" class="text-xl">標題</label>
-            <input type="text" id="title" class="w-full bg-neutral-900 border border-neutral-700 rounded-lg text-white p-2" placeholder="請輸入信件標題" required />
-        </div>
+		<div>
+			<label for="content" class="text-xl">內文</label>
+			<textarea
+				id="content"
+				class="w-full min-h-48 bg-neutral-900 border border-neutral-700 rounded-lg text-white p-2"
+				placeholder="請輸入信件內文"
+				required></textarea>
+		</div>
 
-        <div>
-            <label for="content" class="text-xl">內文</label>
-            <textarea id="content" class="w-full min-h-48 bg-neutral-900 border border-neutral-700 rounded-lg text-white p-2" placeholder="請輸入信件內文" required />
-        </div>
+		<button
+			type="submit"
+			id="emailSubmit"
+			class="w-full bg-neutral-900 rounded-lg text-white p-2"
+		>
+			發送
+		</button>
+	</form>
 
-        <button type="submit" id="emailSubmit" class="w-full bg-neutral-900 rounded-lg text-white p-2">
-            發送
-        </button>
-    </form>
+	<!-- 我的社交媒體 -->
+	<div class="mt-16 flex flex-col items-center">
+		<h1 class="text-white font-bold text-3xl mb-1">社群媒體</h1>
+		<p class="text-neutral-400 text-xl">加好友後請主動說明來意，謝謝你。</p>
+	</div>
 
-    <!-- 我的社交媒體 -->
-    <div class="mt-16 flex flex-col items-center">
-        <h1 class="text-white font-bold text-3xl mb-1">社群媒體</h1>
-        <p class="text-neutral-400 text-xl">加好友後請主動說明來意謝謝</p>
-    </div>
+	<section class="flex flex-col w-1/6 gap-y-4 mb-48">
+		<!-- Instagram -->
+		<div
+			class="w-full h-auto flex flex-row bg-neutral-900 border border-neutral-700 rounded-lg p-3"
+		>
+			<a
+				href="https://www.instagram.com/po_shan.0611/"
+				target="_blank"
+				class="w-1/6 flex justify-center items-center text-3xl mr-3 mt-1"
+			>
+				<i class="text-white fi fi-brands-instagram"></i>
+			</a>
 
-    <section class="flex flex-col w-1/6 gap-y-4 mb-48">
-        <!-- Instagram -->
-        <div class="w-full h-auto flex flex-row bg-neutral-900 border border-neutral-700 rounded-lg p-3">
-            <a href="https://www.instagram.com/po_shan.0611/" target="_blank" class="w-1/6 flex justify-center items-center text-3xl mr-3 mt-1">
-                <i class="text-white fi fi-brands-instagram"></i>
-            </a>
+			<div class="flex flex-col">
+				<a
+					href="https://www.instagram.com/po_shan.0611/"
+					target="_blank"
+					class="text-xl">Instagram</a
+				>
+				<span class="text-sm text-neutral-400">po_shan.0611</span>
+			</div>
+		</div>
 
-            <div class="flex flex-col">
-                <a href="https://www.instagram.com/po_shan.0611/" target="_blank" class="text-xl">Instagram</a>
-                <span class="text-sm text-neutral-400">po_shan.0611</span>
-            </div>
-        </div>
+		<!-- Discord -->
+		<div
+			class="w-full h-auto flex flex-row bg-neutral-900 border border-neutral-700 rounded-lg p-3"
+		>
+			<a
+				href="https://discord.com/users/514774919381516288"
+				target="_blank"
+				class="w-1/6 flex justify-center items-center text-3xl mr-3 mt-1"
+			>
+				<i class="text-white fi fi-brands-discord"></i>
+			</a>
 
-        <!-- Discord -->
-        <div class="w-full h-auto flex flex-row bg-neutral-900 border border-neutral-700 rounded-lg p-3">
-            <a href="https://discord.com/users/514774919381516288" target="_blank" class="w-1/6 flex justify-center items-center text-3xl mr-3 mt-1">
-                <i class="text-white fi fi-brands-discord"></i>
-            </a>
-            
-            <div class="flex flex-col">
-                <a href="https://discord.com/users/514774919381516288" target="_blank" class="text-xl">Discord</a>
-                <span class="text-sm text-neutral-400">pepper_sauce</span>
-            </div>
-        </div>
-    </section>
+			<div class="flex flex-col">
+				<a
+					href="https://discord.com/users/514774919381516288"
+					target="_blank"
+					class="text-xl">Discord</a
+				>
+				<span class="text-sm text-neutral-400">pepper_sauce</span>
+			</div>
+		</div>
+	</section>
 </DefaultWebsite>
