--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,8 +12,8 @@ import { Image } from "astro:assets";
 			<Image
 				src="/images/PepperSauce_icon.jpg"
 				alt="PepperSauce的頭貼"
-				width={230}
-				height={200}
+				width="230"
+				height="200"
 				loading="lazy"
 				class="flex-2 rounded-full"
 			/>
