--- a/src/layouts/DefaultWebsite.astro
+++ b/src/layouts/DefaultWebsite.astro
@@ -1,22 +1,19 @@
 ---
 // layouts/DefaultWebsite.astro
 import "../styles/global.css";
+import { Icon } from "astro-icon/components";
 const { pageTitle } = Astro.props;
 ---
+
 <html lang="en">
 	<head>
 		<title>{pageTitle}</title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-		  rel="stylesheet"
-		  href="https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css"
-		/>
 		<link rel="icon" href="/images/favicon.ico" />
 	</head>
 
 	<body class="flex flex-col bg-neutral-950 text-white min-h-screen">
-
 		<!-- 導覽行 -->
 		<header class="bg-black h-16 flex items-center justify-evenly sticky top-0">
 			<a href="/" class="text-white text-lg">PepperSauce</a>
@@ -29,38 +26,46 @@ const { pageTitle } = Astro.props;
 
 		<!-- 主體 -->
 		<main class="flex flex-col items-center min-h-screen gap-y-16">
-		  <slot />
+			<slot />
 		</main>
 
 		<!-- 頁尾 -->
-		<footer style="border-top-width: 0.5px; border-color: #717171;" class="h-20 mt-4 opacity-85 flex justify-evenly items-center">
+		<footer
+			style="border-top-width: 0.5px; border-color: #717171;"
+			class="h-20 mt-4 opacity-85 flex justify-evenly items-center"
+		>
 			<div class="flex flex-row gap-6 mt-1">
 				<a href="https://www.instagram.com/po_shan.0611/" target="_blank">
-					<i class="text-white fi fi-brands-instagram text-2xl"></i>
+					<Icon name="simple-icons:instagram" class="text-white text-2xl" />
 				</a>
 				<a href="https://discord.com/users/514774919381516288" target="_blank">
-					<i class="text-white fi fi-brands-discord text-2xl"></i>
+					<Icon name="simple-icons:discord" class="text-white text-2xl" />
 				</a>
 				<a href="https://github.com/PepperSauce0712" target="_blank">
-					<i class="text-white fi fi-brands-github text-2xl"></i>
+					<Icon name="simple-icons:github" class="text-white text-2xl" />
 				</a>
 			</div>
 			<p></p>
-			<p class="text-lg text-white" >Copyright © 2025 PepperSauce. All rights reserved.</p>
+			<p class="text-lg text-white">
+				Copyright © 2025 PepperSauce. All rights reserved.
+			</p>
 		</footer>
 
 		<!-- 背景 -->
 		<style>
-		  body {
-			background-image: linear-gradient(
-				to right,
-				rgba(130, 130, 130, 0.05) 1px,
-				transparent 1px
-			  ),
-			  linear-gradient(to bottom, rgba(130, 130, 130, 0.05) 1px, transparent 1px);
-			background-size: 35px 35px;
-		  }
+			body {
+				background-image: linear-gradient(
+						to right,
+						rgba(130, 130, 130, 0.05) 1px,
+						transparent 1px
+					),
+					linear-gradient(
+						to bottom,
+						rgba(130, 130, 130, 0.05) 1px,
+						transparent 1px
+					);
+				background-size: 35px 35px;
+			}
 		</style>
-
 	</body>
 </html>
