--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,5 +1,6 @@
 ---
 import DefaultWebsite from "../layouts/DefaultWebsite.astro";
+import { Icon } from "astro-icon/components";
 ---
 
 <DefaultWebsite pageTitle="PepperSauce | 聯絡我">
@@ -75,9 +76,9 @@ import DefaultWebsite from "../layouts/DefaultWebsite.astro";
 			<a
 				href="https://www.instagram.com/po_shan.0611/"
 				target="_blank"
-				class="w-1/6 flex justify-center items-center text-3xl mr-3 mt-1"
+				class="w-1/6 flex justify-center items-center text-3xl mr-3"
 			>
-				<i class="text-white fi fi-brands-instagram"></i>
+				<Icon name="simple-icons:instagram" class="text-white text-4xl" />
 			</a>
 
 			<div class="flex flex-col">
@@ -97,9 +98,9 @@ import DefaultWebsite from "../layouts/DefaultWebsite.astro";
 			<a
 				href="https://discord.com/users/514774919381516288"
 				target="_blank"
-				class="w-1/6 flex justify-center items-center text-3xl mr-3 mt-1"
+				class="w-1/6 flex justify-center items-center text-3xl mr-3"
 			>
-				<i class="text-white fi fi-brands-discord"></i>
+				<Icon name="simple-icons:discord" class="text-white text-4xl" />
 			</a>
 
 			<div class="flex flex-col">
